--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5434/gravitdb
 spring.datasource.username=thereayo
 spring.datasource.password=6452254
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+server.port=8080
