--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=6452254
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 server.port=8080
+
+spring.jpa.hibernate.ddl-auto=update
